--- a/src/main/resources/templates/fragment/custom_header.html
+++ b/src/main/resources/templates/fragment/custom_header.html
@@ -12,5 +12,7 @@
             integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/35689ed841.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
 </head>
 </html>
