--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -26,6 +26,9 @@
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link " aria-current="page" href="#" th:href="@{/authorities}">Authorities</a>
                 </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link " aria-current="page" href="#" th:href="@{/checkout}">Payment Checkout</a>
+                </li>
             </ul>
             <form method="POST" th:action="@{/logout}" class="d-flex" sec:authorize="isAuthenticated()">
 
